--- a/Hopsi.Web/Views/Account/Login.cshtml
+++ b/Hopsi.Web/Views/Account/Login.cshtml
@@ -1,22 +1,45 @@
 ﻿@using Hopsi.Web.Models.Account
 @model LoginVM
 
-<form id="registerForm" asp-action="Login" method="post">
-    <h2>Login</h2>
-    <hr />
-    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-    <div class="form-floating mb-3">
-        <input asp-for="Username" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-        <label asp-for="Username">Email</label>
-        <span asp-validation-for="Username" class="text-danger"></span>
+@* <div class="flex h-screen items-center justify-center bg-sky-100">
+    <!-- Left: Image -->
+    <div class="hidden h-screen w-1/2 lg:block">
+        <img src="https://img.freepik.com/fotos-premium/imagen-fondo_910766-187.jpg?w=826" alt="Placeholder Image" class="h-full w-full object-cover">
     </div>
-    <div class="form-floating mb-3">
-        <input asp-for="Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-        <label asp-for="Password">Password</label>
-        <span asp-validation-for="Password" class="text-danger"></span>
+    <!-- Right: Login Form -->
+    <div class="w-full p-8 sm:20 md:p-52 lg:p-36 lg:w-1/2">
+        <h1 class="mb-4 text-2xl font-semibold">Login</h1>
+        <form asp-action="Login" method="POST">
+            <!-- Username Input -->
+            <div class="mb-4" "bg-sky-100">
+                <label asp-for="Username" class="block text-gray-600">Username</label>
+                <input asp-for="Username" type="text" id="username" class="w-full rounded-md border border-gray-300 px-3 py-2 focus:outline-none focus:border-blue-500" autocomplete="off">
+            </div>
+            <!-- Password Input -->
+            <div class="mb-4">
+                <label asp-for="Password" class="block text-gray-800">Password</label>
+                <input asp-for="Password" type="password" id="password" class="w-full rounded-md border border-gray-300 px-3 py-2 focus:outline-none focus:border-blue-500" autocomplete="off">
+            </div>
+            <!-- Login Button -->
+            <button type="submit" class="w-full rounded-md bg-red-500 px-4 py-2 font-semibold text-white hover:bg-blue-600">Login</button>
+        </form>
+        <!-- Sign up  Link -->
+        <div class="mt-6 text-center text-green-500">
+            <a href="#" class="hover:underline">Sign up Here</a>
+        </div>
     </div>
-    <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-</form>
+</div> *@
 
-
-
+<div class="card bg-base-100 w-96 shadow-xl">
+    <figure>
+        <img src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+             alt="Shoes" />
+    </figure>
+    <div class="card-body">
+        <h2 class="card-title">Shoes!</h2>
+        <p>If a dog chews shoes whose shoes does he choose?</p>
+        <div class="card-actions justify-end">
+            <button class="btn btn-primary">Buy Now</button>
+        </div>
+    </div>
+</div>
